--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Hello Universe and whoever may be out there!
 author: Jayce Liu
 email: jaycewu@online.nl
+theme: minima
 description: > # this means to ignore newlines until "baseurl:"
   Virtual reality and Mixed Reality are awesome.
 
