--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Virtual reality and Mixed Reality are awesome.
 
 # social links
-twitter_username: NoTime4Twitter# DO NOT include the @ character, or else the build will fail!
-github_username:  Jayce4dev # DO NOT include the @ character, or else the build will fail!
+twitter_username: NoTime4Twitter
+github_username:  Jayce4dev
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+show_excerpts: true
